Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-11575

Using Tab inside basetexteditor works strange

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Not Evaluated
    • None
    • Qt Creator 3.1.0-beta, Qt Creator 3.2.0-beta1
    • Editors
    • 08a66b778 (master)

    Description

      Steps to reproduce:

      • open settings and change the TextEditor behavior for tabs (set it to 'Tabs Only' or 'Mixed')
      • open or create a plain text file / scratchbuffer or similar (something that is not handled by the CppEditor/QmlJSEditor)
      • enter some text containing some tabs
      • check tabs between characters (1)
      • place cursor before a character which is followed by a 'tab' (not necessarily directly, but somewhere inside the same line)
      • hit Tab to insert a Tab at the current position (do this again for other characters before this character within the same line)
      • check tabs between characters (2)
      • modify the settings again to have a higher indentation size than the tab size
      • perform the above again

      Current behavior:

      • if indentation size is less than tab size:
        • for 'Mixed': almost always the tab is replaced by a varying amount of spaces with maximum at indent size
        • for 'Tabs Only': almost always the tab is replaced by varying amount of spaces with maximum at tab size (1), some tabs are inserted and sometimes even whitespaces right to the current inserted tab/whitespace are modified to a tab (2)
      • if indentation size is greater than tab size:
        • for 'Mixed': almost always the tab is replaced by a varying amount of spaces with maximum at indent size
        • for 'Tabs Only': almost always the tab is replaced by a mix of blanks and tabs

      Attachments

        For Gerrit Dashboard: QTCREATORBUG-11575
        # Subject Branch Project Status CR V

        Activity

          People

            davschul David Schulz
            cstenger Christian Stenger
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes