src/plugins/texteditor/tabsettings.h
@@ -20,11 +20,9 @@ namespace TextEditor {
 class TEXTEDITORSUPPORT_EXPORT TabSettings
 {
 public:
-
     enum TabPolicy {
         SpacesOnlyTabPolicy = 0,
-        TabsOnlyTabPolicy = 1,
-        MixedTabPolicy = 2
+        TabsOnlyTabPolicy
     };
 
     // This enum must match the indexes of continuationAlignBehavior widget
@@ -49,7 +47,7 @@ public:
     int positionAtColumn(const QString &text, int column, int *offset = nullptr, bool allowOverstep = false) const;
     int columnCountForText(const QString &text, int startColumn = 0) const;
     int indentedColumn(int column, bool doIndent = true) const;
-    QString indentationString(int startColumn, int targetColumn, int padding, const QTextBlock &currentBlock = QTextBlock()) const;
+    QString indentationString(int startColumn, int targetColumn, int padding) const;
     int indentationColumn(const QString &text) const;
     static int maximumPadding(const QString &text);
 
@@ -57,7 +55,6 @@ public:
     void reindentLine(QTextBlock block, int delta) const;
 
     bool isIndentationClean(const QTextBlock &block, const int indent) const;
-    bool guessSpacesForTabs(const QTextBlock &block) const;
 
     friend bool operator==(const TabSettings &t1, const TabSettings &t2) { return t1.equals(t2); }
     friend bool operator!=(const TabSettings &t1, const TabSettings &t2) { return !t1.equals(t2); }
@@ -70,6 +67,7 @@ public:
     static int trailingWhitespaces(const QString &text);
     static void removeTrailingWhitespace(QTextCursor cursor, QTextBlock &block);
 
+    bool m_autoDetect = true;
     TabPolicy m_tabPolicy = SpacesOnlyTabPolicy;
     int m_tabSize = 8;
     int m_indentSize = 4;
